[package]
name = "screeps-room-regions"
version = "0.1.3"
edition = "2021"
authors = ["Joe Ciskey"]
include = [
    "Cargo.toml",
    "src/**/*",
    "CHANGELOG.md",
    "README.md",
    "LICENSE",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jciskey/screeps-room-regions/"
documentation = "https://docs.rs/screeps-room-regions/"
description = "Region analysis of rooms for Screeps: World in native Rust"

[lib]
name = "screeps_room_regions"

[package.metadata.docs.rs]
all-features = true
# this workaround (and the cfg_attr wrapping around the feature(doc_auto_cfg) call)
# can go once the doc_auto_cfg feature is stablized
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
itertools = "0.13.0"
petgraph = { version = "0.6.5", optional = true }
screeps-game-api = "0.21"

[features]
default = []
petgraph = ["dep:petgraph"]
